--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -1,5 +1,5 @@
 ---
-title: 'This is the main heading for the post'
+title: 'SauceCon 2020 / May 12 - May 14'
 date: 2019-07-05
 permalink: /posts/2012/08/blog-post-1/
 tags:
@@ -8,7 +8,7 @@ tags:
   - category2
 ---
 
-## This is the secondary heading about the post
+## Sessions to look out for.
 
 * Basic config options: _config.yml
 * Top navigation bar config: _data/navigation.yml
